Testing background issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -38,14 +38,14 @@ a{
         background-size:90%;
         background-size: cover;
        background-size:100%; */
+       
 
-       width: 100%;
-       height: 100%;
-       position: fixed;
-       z-index: -1;
        background-image: url('images/trees_nature_background.jpg');
-       background-size: cover;
-       background-position: 85% 50%;
        background-repeat: no-repeat;
+       -webkit-background-size: cover;
+       -moz-background-size: cover;
+       -o-background-size: cover;
+       background-size: cover;
+
     }
 }
